"Updated purchase history-related controller and service files."
"Changes were made to the PurchaseHistoryController.java to improve the handling of purchase history data. Updates were also made to service files including Page.java and its implementation in PageImpl.java. Modifications were applied to PurchaseHistoryDTO.java for data transfer improvements, along with enhancements to the core service logic in PurchaseHistoryService.java and its implementation in PurchaseHistoryServiceImpl.java."